--- a/Assets/index.html
+++ b/Assets/index.html
@@ -1,14 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div>
-        
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
+      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+      crossorigin="anonymous"
+    />
+    <title>Team Profile Generator</title>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"
+      integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg custom-navbar text-center">
+      <p class="text-center">My Team</p>
+    </nav>
+    <div class="col-12 col-md-12">
+      <section class="row justify-content-around">
+        <div class="col-12 col-sm-6 col-lg-4 mb-3">
+          <div class="card">
+            <h3 class="card-header bg-info text-center" id="manager-card">Manager</h3>
+            <div class="card-body">
+              <p class="card-text" id="manager"></p>
+              <button class="btn btn-block btn-info">Learn more.</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 col-lg-4 mb-3">
+          <div class="card">
+            <h3 class="card-header bg-success">Service 2</h3>
+            <div class="card-body">
+              <p class="card-text"></p>
+              <button class="btn btn-block btn-info">Learn more.</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 col-lg-4 mb-3">
+          <div class="card">
+            <h3 class="card-header bg-warning">Service 3</h3>
+            <div class="card-body">
+              <p class="card-text"></p>
+              <button class="btn btn-block btn-info">Learn more.</button>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
-</body>
+  </body>
 </html>
